:bug: fix alignment reseaux input ff + ie11

--- a/src/scss/layout/_forms.scss
+++ b/src/scss/layout/_forms.scss
@@ -306,6 +306,7 @@ select{
     .field-inline{
         display: inline-block;
         max-width: 220px;
+        vertical-align: top;
     }
     .btn-secondary{
         .js &{
